# java

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
.aspect/: config.axl
tools/: BUILD.bazel  repin
tools/format/: BUILD.bazel
